Fixing Bloglinks icon not showing up

--- a/css/plugins/bloglinks.less
+++ b/css/plugins/bloglinks.less
@@ -38,13 +38,13 @@
             span.title {
                 display: block;
                 max-width: 90%;
+            }
 
-                .truncate {
-                    display: inline-block;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                }
+            span.truncate {
+                display: inline-block !important;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
 
             span.icon {
